--- a/SML/SML/Views/ItemsPage.xaml
+++ b/SML/SML/Views/ItemsPage.xaml
@@ -2,14 +2,14 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="SML.Views.ItemsPage"
-             Title="{Binding Title}"
+             Title="Tracker List"
              xmlns:local="clr-namespace:SML.ViewModels"  
              xmlns:model="clr-namespace:SML.Models"  
              x:Name="BrowseItemsPage">
 
-    <ContentPage.ToolbarItems>
+    <!--<ContentPage.ToolbarItems>
         <ToolbarItem Text="Add" Command="{Binding AddItemCommand}" />
-    </ContentPage.ToolbarItems>
+    </ContentPage.ToolbarItems>-->
     <!--
       x:DataType enables compiled bindings for better performance and compile time validation of binding expressions.
       https://docs.microsoft.com/xamarin/xamarin-forms/app-fundamentals/data-binding/compiled-bindings
